[tool.poetry]
name = "pocket-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pocket_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = "^0.7.0", extras = ["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
